--- a/index.html
+++ b/index.html
@@ -3,78 +3,72 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>StatTrak P2P</title>
+    <title>StatTrak Professional Market</title>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
     <style>
-        :root { --bg: #0f111a; --card: #1a1d29; --accent: #7b61ff; --text: #ffffff; }
-        body { font-family: 'Segoe UI', sans-serif; background: var(--bg); color: var(--text); margin: 0; padding-bottom: 70px; }
+        :root { --bg: #0b0e14; --card: #151921; --accent: #0088cc; --text: #ffffff; --gray: #8e8e93; }
+        body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; background: var(--bg); color: var(--text); margin: 0; padding: 0; overflow-x: hidden; }
         
-        /* Навигация */
-        .tabs { display: flex; justify-content: space-around; background: var(--card); position: fixed; bottom: 0; width: 100%; padding: 10px 0; border-top: 1px solid #333; }
-        .tab-btn { background: none; border: none; color: #888; font-size: 14px; cursor: pointer; }
-        .tab-btn.active { color: var(--accent); font-weight: bold; }
+        /* Navigation Bar */
+        .nav-bar { display: flex; justify-content: space-around; background: #1c212a; position: fixed; bottom: 0; width: 100%; padding: 12px 0; border-top: 1px solid #2c3440; z-index: 100; }
+        .nav-item { background: none; border: none; color: var(--gray); font-size: 12px; cursor: pointer; transition: 0.3s; }
+        .nav-item.active { color: var(--accent); transform: scale(1.1); }
 
-        /* Окна */
-        .page { display: none; padding: 15px; }
+        /* Pages */
+        .page { display: none; padding: 20px; padding-bottom: 80px; animation: fadeIn 0.3s ease; }
         .page.active { display: block; }
+        @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
 
-        /* Фильтры */
-        .filters { margin-bottom: 15px; display: flex; gap: 10px; }
-        input, select { background: #000; border: 1px solid #444; color: #fff; padding: 8px; border-radius: 6px; flex-grow: 1; }
-
-        /* Витрина */
+        /* Search & Filters */
+        .search-container { margin-bottom: 20px; display: flex; gap: 10px; }
+        input { background: #1c212a; border: 1px solid #2c3440; color: #fff; padding: 12px; border-radius: 10px; width: 100%; outline: none; }
+        
+        /* Market Grid */
         .market-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 15px; }
-        .item-card { background: var(--card); border-radius: 12px; padding: 10px; text-align: center; border: 1px solid #333; }
-        .item-card img { width: 100%; border-radius: 8px; }
-        .price { color: var(--accent); font-weight: bold; margin: 5px 0; }
+        .skin-card { background: var(--card); border-radius: 15px; padding: 12px; text-align: center; border: 1px solid #2c3440; transition: 0.2s; }
+        .skin-card:active { transform: scale(0.95); }
+        .skin-card img { width: 100%; border-radius: 10px; margin-bottom: 10px; }
+        .skin-name { font-size: 14px; font-weight: 500; height: 35px; overflow: hidden; }
+        .price-tag { color: var(--accent); font-weight: bold; font-size: 16px; margin: 8px 0; }
 
-        /* Профиль */
-        .profile-card { background: var(--card); padding: 20px; border-radius: 12px; border: 1px solid var(--accent); }
+        /* Profile Section */
+        .profile-info { background: var(--card); padding: 20px; border-radius: 15px; border: 1px solid #2c3440; }
+        .status-badge { display: inline-block; padding: 4px 10px; border-radius: 20px; font-size: 11px; margin-bottom: 10px; }
+        .status-ok { background: #28a74533; color: #28a745; }
+        .status-err { background: #dc354533; color: #dc3545; }
     </style>
 </head>
 <body>
 
-    <div id="market" class="page active">
-        <h2>Маркет</h2>
-        <div class="filters">
-            <input type="text" id="searchInput" placeholder="Поиск..." oninput="applyFilters()">
-            <select id="typeFilter" onchange="applyFilters()">
-                <option value="all">Все типы</option>
-                <option value="AK-47">AK-47</option>
-                <option value="M4A4">M4A4</option>
-                <option value="Knife">Ножи</option>
-            </select>
+    <div id="page-market" class="page active">
+        <h2 style="margin-top: 0;">Маркет</h2>
+        <div class="search-container">
+            <input type="text" id="search" placeholder="Поиск скинов..." oninput="filterSkins()">
         </div>
-        <div class="market-grid" id="itemsGrid">
+        <div class="market-grid" id="grid">
             </div>
     </div>
 
-    <div id="profile" class="page">
-        <h2>Личный кабинет</h2>
-        <div class="profile-card">
-            <label>Ваша Trade-ссылка:</label>
-            <input type="text" id="tradeLinkInput" placeholder="https://steamcommunity.com/tradeoffer/new/..." onchange="saveLink()">
-            <p style="font-size: 12px; color: #888;">Ссылка сохраняется автоматически при вводе.</p>
+    <div id="page-profile" class="page">
+        <h2 style="margin-top: 0;">Профиль</h2>
+        <div class="profile-info">
+            <div id="link-status" class="status-badge status-err">Трейд-ссылка не настроена</div>
+            <label style="display: block; margin-bottom: 8px; font-size: 14px; color: var(--gray);">Trade URL Steam:</label>
+            <input type="text" id="trade-input" placeholder="https://steamcommunity.com/tradeoffer/new/..." oninput="updateTradeLink()">
+            <p style="font-size: 12px; color: var(--gray); line-height: 1.5;">Без ссылки бот не сможет отправить вам скин. Ссылка сохраняется автоматически.</p>
         </div>
     </div>
 
-    <div class="tabs">
-        <button class="tab-btn active" onclick="showPage('market', this)">🛒 Маркет</button>
-        <button class="tab-btn" onclick="showPage('profile', this)">👤 Профиль</button>
-    </div>
+    <nav class="nav-bar">
+        <button class="nav-item active" id="btn-market" onclick="switchPage('market')">🛒 Маркет</button>
+        <button class="nav-item" id="btn-profile" onclick="switchPage('profile')">👤 Профиль</button>
+    </nav>
 
     <script>
         let tg = window.Telegram.WebApp;
         tg.expand();
+        tg.MainButton.textColor = '#FFFFFF';
+        tg.MainButton.color = '#0088cc';
 
-        // База товаров
-        const items = [
-            { name: "AK-47 Ледяной уголь", price: 950, type: "AK-47", img: "https://community.cloudflare.steamstatic.com/economy/image/-9a81dlWLwJ2UUGcVs_nsVtzdOEdtWwKGZZLQHTxDZ7I56KU0Zwwo4NUX4oFJZEHLbXH5ApeO4YmlhxYQknCRvCo04DEVlxkKgpot7HxfDhjxszJegJM6dO4q4yYmfPLP7LWnn9u5MRjjeyPpt2tjAex_0NtZ2_7I9SccVNoZAnR_lG5k-3vgpDuu5_Lz3Vgv3Mm4S7VzRfm0AYMMLLY9vW60Q/360fx360f" },
-            { name: "M4A4 Темари", price: 1200, type: "M4A4", img: "https://community.cloudflare.steamstatic.com/economy/image/-9a81dlWLwJ2UUGcVs_nsVtzdOEdtWwKGZZLQHTxDZ7I56KU0Zwwo4NUX4oFJZEHLbXH5ApeO4YmlhxYQknCRvCo04DEVlxkKgpovbSsLQJf1f_BYi5H49Kzh7-Dhfb9DL7VqWdY781lxOiS89SmiwXsr0Zla271cdXAdVNoYV_Q-lO4lb_vjJ_v7p7JyHBl63IgtmGdwUI97Y9f_A/360fx360f" }
-        ];
-
-        function showPage(pageId, btn) {
-            document.querySelectorAll('.page').forEach(p => p.classList.remove('active'));
-            document.querySelectorAll('.tab-btn').forEach(b => b.classList.remove('active'));
-            document.getElementById(pageId).
-
+        const SKINS = [
+            { id: 1, name: "AK-47 | Ледяной уголь", price: 950, img: "https://community.cloudflare.steamstatic.
