--- a/index.html
+++ b/index.html
@@ -8,30 +8,19 @@
     <style>
         :root { --bg: #0b0e14; --card: #151921; --accent: #0088cc; --text: #ffffff; --gray: #8e8e93; }
         body { font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif; background: var(--bg); color: var(--text); margin: 0; padding: 0; overflow-x: hidden; }
-        
-        /* Navigation Bar */
         .nav-bar { display: flex; justify-content: space-around; background: #1c212a; position: fixed; bottom: 0; width: 100%; padding: 12px 0; border-top: 1px solid #2c3440; z-index: 100; }
         .nav-item { background: none; border: none; color: var(--gray); font-size: 12px; cursor: pointer; transition: 0.3s; }
         .nav-item.active { color: var(--accent); transform: scale(1.1); }
-
-        /* Pages */
         .page { display: none; padding: 20px; padding-bottom: 80px; animation: fadeIn 0.3s ease; }
         .page.active { display: block; }
         @keyframes fadeIn { from { opacity: 0; } to { opacity: 1; } }
-
-        /* Search & Filters */
         .search-container { margin-bottom: 20px; display: flex; gap: 10px; }
         input { background: #1c212a; border: 1px solid #2c3440; color: #fff; padding: 12px; border-radius: 10px; width: 100%; outline: none; }
-        
-        /* Market Grid */
         .market-grid { display: grid; grid-template-columns: 1fr 1fr; gap: 15px; }
         .skin-card { background: var(--card); border-radius: 15px; padding: 12px; text-align: center; border: 1px solid #2c3440; transition: 0.2s; }
-        .skin-card:active { transform: scale(0.95); }
         .skin-card img { width: 100%; border-radius: 10px; margin-bottom: 10px; }
         .skin-name { font-size: 14px; font-weight: 500; height: 35px; overflow: hidden; }
         .price-tag { color: var(--accent); font-weight: bold; font-size: 16px; margin: 8px 0; }
-
-        /* Profile Section */
         .profile-info { background: var(--card); padding: 20px; border-radius: 15px; border: 1px solid #2c3440; }
         .status-badge { display: inline-block; padding: 4px 10px; border-radius: 20px; font-size: 11px; margin-bottom: 10px; }
         .status-ok { background: #28a74533; color: #28a745; }
@@ -39,31 +28,26 @@
     </style>
 </head>
 <body>
-
     <div id="page-market" class="page active">
         <h2 style="margin-top: 0;">Маркет</h2>
         <div class="search-container">
             <input type="text" id="search" placeholder="Поиск скинов..." oninput="filterSkins()">
         </div>
-        <div class="market-grid" id="grid">
-            </div>
+        <div class="market-grid" id="grid"></div>
     </div>
-
     <div id="page-profile" class="page">
         <h2 style="margin-top: 0;">Профиль</h2>
         <div class="profile-info">
             <div id="link-status" class="status-badge status-err">Трейд-ссылка не настроена</div>
             <label style="display: block; margin-bottom: 8px; font-size: 14px; color: var(--gray);">Trade URL Steam:</label>
             <input type="text" id="trade-input" placeholder="https://steamcommunity.com/tradeoffer/new/..." oninput="updateTradeLink()">
-            <p style="font-size: 12px; color: var(--gray); line-height: 1.5;">Без ссылки бот не сможет отправить вам скин. Ссылка сохраняется автоматически.</p>
+            <p style="font-size: 12px; color: var(--gray);">Ссылка сохраняется автоматически.</p>
         </div>
     </div>
-
     <nav class="nav-bar">
         <button class="nav-item active" id="btn-market" onclick="switchPage('market')">🛒 Маркет</button>
         <button class="nav-item" id="btn-profile" onclick="switchPage('profile')">👤 Профиль</button>
     </nav>
-
     <script>
         let tg = window.Telegram.WebApp;
         tg.expand();
@@ -71,4 +55,73 @@
         tg.MainButton.color = '#0088cc';
 
         const SKINS = [
-            { id: 1, name: "AK-47 | Ледяной уголь", price: 950, img: "https://community.cloudflare.steamstatic.
+            { id: 1, name: "AK-47 | Ледяной уголь", price: 950, img: "https://community.cloudflare.steamstatic.com/economy/image/-9a81dlWLwJ2UUGcVs_nsVtzdOEdtWwKGZZLQHTxDZ7I56KU0Zwwo4NUX4oFJZEHLbXH5ApeO4YmlhxYQknCRvCo04DEVlxkKgpot7HxfDhjxszJegJM6dO4q4yYmfPLP7LWnn9u5MRjjeyPpt2tjAex_0NtZ2_7I9SccVNoZAnR_lG5k-3vgpDuu5_Lz3Vgv3Mm4S7VzRfm0AYMMLLY9vW60Q/360fx360f" },
+            { id: 2, name: "M4A4 | Темари", price: 1200, img: "https://community.cloudflare.steamstatic.com/economy/image/-9a81dlWLwJ2UUGcVs_nsVtzdOEdtWwKGZZLQHTxDZ7I56KU0Zwwo4NUX4oFJZEHLbXH5ApeO4YmlhxYQknCRvCo04DEVlxkKgpovbSsLQJf1f_BYi5H49Kzh7-Dhfb9DL7VqWdY781lxOiS89SmiwXsr0Zla271cdXAdVNoYV_Q-lO4lb_vjJ_v7p7JyHBl63IgtmGdwUI97Y9f_A/360fx360f" },
+            { id: 3, name: "AWP | Фобос", price: 350, img: "https://community.cloudflare.steamstatic.com/economy/image/-9a81dlWLwJ2UUGcVs_nsVtzdOEdtWwKGZZLQHTxDZ7I56KU0Zwwo4NUX4oFJZEHLbXH5ApeO4YmlhxYQknCRvCo04DEVlxkKgpot621FAR17PLfYQJD_9W7m5a0mvLwOq7c2G9S68hyj9bM8Ij8nVn6_EttY2ilLY-RdVA6YV_U-VS2k7u8h5S6us_InHdrvXNw7H_VzBy_1BlNcKUz16KZAnoB/360fx360f" }
+        ];
+
+        let currentSelection = null;
+
+        function switchPage(page) {
+            document.querySelectorAll('.page').forEach(p => p.classList.remove('active'));
+            document.querySelectorAll('.nav-item').forEach(b => b.classList.remove('active'));
+            document.getElementById('page-' + page).classList.add('active');
+            document.getElementById('btn-' + page).classList.add('active');
+        }
+
+        function renderSkins(list) {
+            const grid = document.getElementById('grid');
+            grid.innerHTML = list.map(skin => `
+                <div class="skin-card" onclick="selectSkin('${skin.name}', ${skin.price})">
+                    <img src="${skin.img}">
+                    <div class="skin-name">${skin.name}</div>
+                    <div class="price-tag">${skin.price} ₽</div>
+                </div>
+            `).join('');
+        }
+
+        function filterSkins() {
+            const query = document.getElementById('search').value.toLowerCase();
+            const filtered = SKINS.filter(s => s.name.toLowerCase().includes(query));
+            renderSkins(filtered);
+        }
+
+        function updateTradeLink() {
+            const val = document.getElementById('trade-input').value;
+            const status = document.getElementById('link-status');
+            if(val.includes('tradeoffer/new')) {
+                localStorage.setItem('trade_link', val);
+                status.innerText = "✅ Ссылка сохранена";
+                status.className = "status-badge status-ok";
+            } else {
+                status.innerText = "❌ Неверная ссылка";
+                status.className = "status-badge status-err";
+            }
+        }
+
+        function selectSkin(name, price) {
+            const link = localStorage.getItem('trade_link');
+            if(!link) {
+                tg.showAlert("Сначала укажите Trade-ссылку в профиле!");
+                switchPage('profile');
+                return;
+            }
+            currentSelection = { item: name, price: price, trade_link: link };
+            tg.MainButton.setText(`КУПИТЬ ${name.toUpperCase()}`);
+            tg.MainButton.show();
+        }
+
+        tg.MainButton.onClick(() => {
+            tg.sendData(JSON.stringify(currentSelection));
+            tg.close();
+        });
+
+        const savedLink = localStorage.getItem('trade_link');
+        if(savedLink) {
+            document.getElementById('trade-input').value = savedLink;
+            updateTradeLink();
+        }
+        renderSkins(SKINS);
+    </script>
+</body>
+</html>
