--- a/index.html
+++ b/index.html
@@ -56,6 +56,9 @@
     </style>
 </head>
 <body>
+    <div id="profile-section">
+    <h2>Ваш профиль</h2>
+    <div id="ton-connect-button"></div> </div>
 
     <div id="marketPage" class="page active">
         <h2 style="margin-bottom: 10px;">🛒 Маркет</h2>
@@ -186,4 +189,5 @@
     </script>
 </body>
 </html>
+
 
