--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
         <div class="nav-item" id="nav-profile" onclick="switchPage('profile')"><span>👤</span><span style="font-size:10px;">Профиль</span></div>
     </nav>
 
-    <script>
+   <script>
         const tg = window.Telegram.WebApp;
         tg.ready();
         tg.expand();
@@ -123,43 +123,100 @@
 
         let selectedItemName = "";
 
+        // Функция переключения страниц
         function switchPage(page) {
             document.querySelectorAll('.page').forEach(p => p.classList.remove('active'));
             document.getElementById(page + 'Page').classList.add('active');
             document.querySelectorAll('.nav-item').forEach(i => i.classList.remove('active'));
-            
-            // Находим нажатый элемент через id навигации
             document.getElementById('nav-' + page).classList.add('active');
             
             if(page === 'sell') loadInventory();
             if(page === 'market') loadMarketItems();
-            if(page === 'profile') loadTradeUrl();
+            if(page === 'profile') loadProfileData(); // Загружаем данные при входе в профиль
         }
 
-        // Функция оплаты
+        // --- НОВАЯ ФУНКЦИЯ ЗАГРУЗКИ ИНВЕНТАРЯ ---
+        async function loadInventory() {
+            const steamId = localStorage.getItem('steamId');
+            const loader = document.getElementById('inventoryLoader');
+            const grid = document.getElementById('inventoryGrid');
+
+            if (!steamId) {
+                loader.innerHTML = '<div style="padding:20px;">Введите SteamID64 в профиле, чтобы увидеть свои скины</div>';
+                loader.style.display = 'block';
+                grid.style.display = 'none';
+                return;
+            }
+
+            loader.style.display = 'block'; 
+            loader.innerHTML = 'Загрузка реального инвентаря Steam...';
+            grid.style.display = 'none';
+
+            try {
+                // Используем прокси для обхода ограничений браузера (CORS)
+                const response = await fetch(`https://corsproxy.io/?https://steamcommunity.com/inventory/${steamId}/730/2?l=russian&count=100`);
+                const data = await response.json();
+
+                if (!data || !data.descriptions) {
+                    loader.innerHTML = 'Инвентарь скрыт или произошла ошибка. Проверьте настройки приватности Steam.';
+                    return;
+                }
+
+                // Собираем скины
+                grid.innerHTML = data.descriptions.map(desc => {
+                    const imageUrl = `https://community.akamai.steamstatic.com/economy/image/${desc.icon_url}/330x192`;
+                    return `
+                        <div class="item-card" onclick="openSellModal('${desc.market_name}')">
+                            <img src="${imageUrl}" class="item-image" onerror="this.src='https://via.placeholder.com/150?text=No+Image'">
+                            <div class="item-name">${desc.market_name}</div>
+                            <button class="btn btn-success" style="padding: 5px; font-size: 12px; margin-top:5px;">💰 Продать</button>
+                        </div>
+                    `;
+                }).join('');
+
+                loader.style.display = 'none'; 
+                grid.style.display = 'grid';
+
+            } catch (e) {
+                loader.innerHTML = 'Ошибка сети. Попробуйте позже.';
+                console.error(e);
+            }
+        }
+
+        // --- ФУНКЦИИ ПРОФИЛЯ ---
+        function saveProfileData() {
+            const steamId = document.getElementById('steamIdInput').value;
+            const tradeUrl = document.getElementById('tradeUrlInput').value;
+            localStorage.setItem('steamId', steamId);
+            localStorage.setItem('tradeUrl', tradeUrl);
+            document.getElementById('saveStatus').innerHTML = '<span style="color:#10b981; font-size:12px;">✅ Данные сохранены!</span>';
+            setTimeout(() => { document.getElementById('saveStatus').innerHTML = ''; }, 3000);
+        }
+
+        function loadProfileData() {
+            document.getElementById('steamIdInput').value = localStorage.getItem('steamId') || '';
+            document.getElementById('tradeUrlInput').value = localStorage.getItem('tradeUrl') || '';
+        }
+
+        // --- ОСТАЛЬНЫЕ ФУНКЦИИ (МАРКЕТ И МОДАЛКИ) ---
         async function buyItem(name, price) {
             if (!tonConnectUI.connected) {
                 tg.showAlert("Сначала подключите кошелек в профиле!");
                 switchPage('profile');
                 return;
             }
-
             const transaction = {
                 validUntil: Math.floor(Date.now() / 1000) + 600,
-                messages: [
-                    {
-                        address: "ТВОЙ_АДРЕС_КОШЕЛЬКА", // ЗАМЕНИ НА СВОЙ АДРЕС TON
-                        amount: (price * 1000000000).toString() 
-                    }
-                ]
+                messages: [{
+                    address: "ТВОЙ_АДРЕС_КОШЕЛЬКА", // ЗАМЕНИ НА СВОЙ
+                    amount: (price * 1000000000).toString() 
+                }]
             };
-
             try {
                 await tonConnectUI.sendTransaction(transaction);
-                tg.showAlert("Оплата " + price + " TON принята! Бот отправит " + name + " в течение 5 минут.");
+                tg.showAlert("Запрос на оплату отправлен!");
             } catch (e) {
-                console.error(e);
-                tg.showAlert("Оплата не была завершена.");
+                tg.showAlert("Ошибка оплаты.");
             }
         }
 
@@ -179,26 +236,6 @@
             `).join('');
         }
 
-        function loadInventory() {
-            const loader = document.getElementById('inventoryLoader');
-            const grid = document.getElementById('inventoryGrid');
-            loader.style.display = 'block'; grid.style.display = 'none';
-            setTimeout(() => {
-                const myItems = [
-                    { name: 'AWP | Asiimov', img: 'https://community.akamai.steamstatic.com/economy/image/-9a81dlWLwJ2UUGcVs_nsVtzdOEdtWwKGZZLQHTxDZ7I56KU0Zwwo4NUX4oFJZEHLbXH5ApeO4YmlhxYQknCRvCo04DEVlxkKgpot621FAR17PLfYQJD_9W7m5a0mvLwOq7c2GlTu8Ak2L2X89Wg2FHk-hJuYW_2LI6QcwQ3aFvY-1XvyOu6gJPpvZvAznth6yI8pSGKhQxgmCw/330x192' },
-                    { name: 'Glock-18 | Fade', img: 'https://community.akamai.steamstatic.com/economy/image/-9a81dlWLwJ2UUGcVs_nsVtzdOEdtWwKGZZLQHTxDZ7I56KU0Zwwo4NUX4oFJZEHLbXH5ApeO4YmlhxYQknCRvCo04DEVlxkKgposbaqKAxf0Ob3djFN79fnzL-cluX4MrXVhGpT18l4jeHVu9-miVa2rhFvMD-nJYXGcwQ2ZlvX-FC5xOjqgpC8753Oz3Fr7CUrsX2OyQv330_vDjnbqQ/330x192' }
-                ];
-                grid.innerHTML = myItems.map(i => `
-                    <div class="item-card" onclick="openSellModal('${i.name}')">
-                    <img src="${i.img}" class="item-image">
-                        <div class="item-name">${i.name}</div>
-                        <button class="btn btn-success" style="padding: 5px; font-size: 12px; margin-top:5px;">💰 Продать</button>
-                    </div>
-                `).join('');
-                loader.style.display = 'none'; grid.style.display = 'grid';
-            }, 1000);
-        }
-
         function openSellModal(name) {
             selectedItemName = name;
             document.getElementById('modalItemName').innerText = name;
@@ -210,30 +247,17 @@
         function confirmSell() {
             const price = document.getElementById('priceInput').value;
             const link = localStorage.getItem('tradeUrl');
-            if(!price || price <= 0) { tg.showAlert('Введите корректную цену!'); return; }
-            if(!link) { tg.showAlert('Сначала укажите Trade URL в профиле!'); switchPage('profile'); closeSellModal(); return; }
-
-            tg.sendData(JSON.stringify({
-                action: 'sell_order',
-                item: selectedItemName,
-                price: price,
-                trade_link: link
-            }));
+            if(!price || price <= 0) { tg.showAlert('Введите цену!'); return; }
+            if(!link) { tg.showAlert('Укажите Trade URL!'); switchPage('profile'); closeSellModal(); return; }
+            tg.sendData(JSON.stringify({ action: 'sell_order', item: selectedItemName, price: price, trade_link: link }));
             closeSellModal();
+            tg.showAlert("Выставлено на продажу (демо)");
         }
 
-        function saveTradeUrl() {
-            const val = document.getElementById('tradeUrlInput').value;
-            if(val.includes('steamcommunity.com')) {
-                localStorage.setItem('tradeUrl', val);
-                document.getElementById('tradeUrlStatus').innerHTML = '<span style="color:#10b981; font-size:12px;">✅ Ссылка сохранена!</span>';
-            } else { tg.showAlert('Это не похоже на ссылку Steam Trade!'); }
-        }
-
-        function loadTradeUrl() { document.getElementById('tradeUrlInput').value = localStorage.getItem('tradeUrl') || ''; }
-
+        // Запуск при старте
         loadMarketItems();
     </script>
 </body>
 </html>
+
 
